0.6 ?
	Targets:
		- Improve tag detection in method/var/class documentation
			(TypeHandler.hx processDoc method)
		- Add @todo tag
			(TypeHandler.hx processDoc method)
		- Add --generateTodo flag for making /todo.html
			(in config.baseDirectory, look in ChxDocMain.pass4())
		- Improve default template look for --developer
			(Franco)

0.5 2009-01-12
	- Added --installTemplate switch to copy all images and stylesheet from template dir
	- Added --developer switch to toggle all --showPrivate* flags
	- Added platform.developer Bool which is true if any showPrivate* flag is set
	- Added platforms list to platform
	- Fixed private type generation